Update to fix overflow-x in tablet and mobile

--- a/src/marvel/adapters/primary/ui/pages/CharacterDetails.module.css
+++ b/src/marvel/adapters/primary/ui/pages/CharacterDetails.module.css
@@ -61,7 +61,6 @@
 .characterDetails__comics-container {
   display: flex;
   justify-content: center;
-  width: 100%;
 }
 
 
